src/tests/routes/private/snapshots/integration__routes__private__crate_owner_invitations__invitation_list-2.snap
---
source: src/tests/routes/private/crate_owner_invitations.rs
expression: invitations
---
{
  "invitations": [
    {
      "invitee_id": 3,
      "inviter_id": 1,
      "crate_id": 1,
      "crate_name": "crate_1",
      "created_at": "[datetime]",
      "expires_at": "[datetime]"
    }
  ],
  "users": [
    {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": "http://example.com/icon-the-first.png",
      "url": "https://github.com/foo",
      "created_at": "[datetime]"
    },
    {
      "id": 3,
      "login": "user_2",
      "name": null,
      "avatar": "http://example.com/icon-the-first.png",
      "url": "https://github.com/user_2",
      "created_at": "[datetime]"
    }
  ],
  "meta": {
    "next_page": null
  }
}
