src/tests/routes/private/snapshots/integration__routes__private__crate_owner_invitations__invitation_list-3.snap
---
source: src/tests/routes/private/crate_owner_invitations.rs
expression: invitations
---
{
  "invitations": [],
  "users": [],
  "meta": {
    "next_page": null
  }
}
