src/tests/routes/private/snapshots/integration__routes__private__crate_owner_invitations__invitations_list_does_not_include_expired_invites.snap
---
source: src/tests/routes/private/crate_owner_invitations.rs
expression: invitations
---
{
  "invitations": [
    {
      "invitee_id": 2,
      "inviter_id": 1,
      "crate_id": 2,
      "crate_name": "crate_2",
      "created_at": "[datetime]",
      "expires_at": "[datetime]"
    }
  ],
  "users": [
    {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": "http://example.com/icon-the-first.png",
      "url": "https://github.com/foo",
      "created_at": "[datetime]"
    },
    {
      "id": 2,
      "login": "invited_user",
      "name": null,
      "avatar": "http://example.com/icon-the-first.png",
      "url": "https://github.com/invited_user",
      "created_at": "[datetime]"
    }
  ],
  "meta": {
    "next_page": null
  }
}
